--- a/report.html
+++ b/report.html
@@ -4,7 +4,9 @@ title: SigneT 60 Report
 ---
 
 <div class="report">
+    <br>
     <h1>SigneT60 Report</h1>
+    <h3>Written by Will Russell</h3>
     <p>
         60 years ago, a small group of SigneTs sailed from Dover to Calais to prove the seaworthiness of them despite being a
         small wooden dinghy. This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of
