--- a/report.html
+++ b/report.html
@@ -9,9 +9,10 @@ title: SigneT 60 Report
     <h3>Written by Will Russell</h3>
     <br>
     <p>
-        60 years ago, a small group of SigneTs sailed from Dover to Calais to prove the seaworthiness of them despite being a
-        small wooden dinghy. This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of
-        RNLI and Ellen MacArthur Cancer Trust!
+        60 years ago, a small group of SigneTs sailed from Dover to Calais to prove the seaworthiness of them despite being a small 
+        wooden dinghy. This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and 
+        Ellen MacArthur Cancer Trust! Additionally, to once again show both the robustness of SigneTs while also showing how they’re a 
+        great boat for everyone (all shapes and sizes!) even 60 years on!  
     </p>
     <img src="/img/report/1.jpeg">
     <p>
@@ -23,11 +24,13 @@ title: SigneT 60 Report
     </p>
     <img src="/img/report/2.jpeg">
     <p>
-        Completing the voyage were ST921 and ST924, the best SigneTs for completing it. ST921 was recently renovated with new
-        paint, varnish and rope, completely unrecognisable to its former life. ST924 was hand built in 2009 and looks just like
-        new! Between the two boats, we had 7 sailors lined up to ensure we were able to complete the voyage in case someone was
-        unable to continue. We had Will Russell and Natalie Smith starting off in their own boat ST921, and John Panting sailing
-        his boat, ST924 with Hannah Whiteside. Along with them, we had Michael Whiteside, Rick Adams and Tom Field-Stevens.
+        Completing the voyage were ST921 and ST924, the best SigneTs for completing it. ST921 was recently renovated with new paint, 
+        varnish and rope, completely unrecognisable to its former life. ST924 was hand built in 2009 and looks just like new! 
+        Between the two boats, we had 7 sailors of all different ages and sizes lined up to ensure we were able to complete the 
+        voyage in case someone was unable to continue. We had Will Russell and Natalie Smith starting off in their own boat ST921, 
+        and John Panting sailing his boat, ST924 with Hannah Whiteside. Along with them, we had Michael Whiteside, Rick Adams and 
+        Tom Field-Stevens. With this mixture of sailors, it just shows how flexible and attractive the SigneT is to people. It’s not 
+        just for one demographic!
     </p>
     <img src="/img/report/3.jpeg">
     <p>
