--- a/report.html
+++ b/report.html
@@ -131,6 +131,8 @@ title: SigneT 60 Report
     </p>
 
     <p>
-        This was an epic adventure that proved to be memorable and supported some incredible causes too.
+        This was an epic adventure that proved to be memorable and supported some incredible causes too. 
+        Twenty-somethings, young families and older DIYers alike can get some serious mileage out of this class, 
+        new members welcome to join our Nation-wide fleet.
     </p>
 </div>
