--- a/report.html
+++ b/report.html
@@ -10,7 +10,7 @@ title: SigneT 60 Report
     <br>
     <p>
         60 years ago, a small group of SigneTs sailed from Dover to Calais to prove the seaworthiness of them despite being a small 
-        wooden dinghy. This year the SigneT Class Owners Association will be completing a tribute to this voyage in aid of RNLI and 
+        wooden dinghy. On 11th June 2023, the SigneT Class Owners Association completed a tribute to this voyage in aid of RNLI and 
         Ellen MacArthur Cancer Trust! Additionally, to once again show both the robustness of SigneTs while also showing how they’re a 
         great boat for everyone (all shapes and sizes!) even 60 years on!  
     </p>
