--- a/report.html
+++ b/report.html
@@ -7,6 +7,7 @@ title: SigneT 60 Report
     <br>
     <h1>SigneT60 Report</h1>
     <h3>Written by Will Russell</h3>
+    <h4>Report also on <a href="https://www.yachtsandyachting.com/news/263708/SigneT60--Dover-to-Calais">Yachts and Yachting</a></h4>
     <br>
     <p>
         60 years ago, a small group of SigneTs sailed from Dover to Calais to prove the seaworthiness of them despite being a small 
